<resources>
    <string name="remove_subscription">Remove Subscription</string>
    <string name="today">Today</string>
    <string name="yestoday">Yestoday</string>
    <string name="before_yestoday">Day before Yestoday</string>
    <string name="add_star_mark">Star</string>
    <string name="remove_star_mark">Unstar</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_all_read">Mark all as Read</string>
    <string name="mark_all_above_as_read">Mark All Above as Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="mark_all_below_as_read">Mark All Below as Read</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="add">Add</string>
    <string name="cancel">cancel</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="no_subscription_found">No Subscription Found</string>
    <string name="add_subscription_content">Title, URL or Topic</string>
    <string name="add_subscription_hint">Feed or Site URL ...</string>
    <string name="none"/>
    <string name="got_it">Got it</string>
    <string name="all">All</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="already_add">Already Added</string>
    <string name="version">Version</string>
    <string name="changelog">Change Log</string>
    <string name="author">Author</string>
    <string name="author_name">Match</string>
    <string name="author_from">GuangZhou, China</string>
    <string name="add_to_google_plus_circles">Add to Google Plus circles</string>
    <string name="contact_on_wechat">Contact on Wechat</string>
    <string name="fork_on_github">Fork on GitHub</string>
    <string name="visit_website">Visit website</string>
    <string name="support_development">Support</string>
    <string name="report_bugs">Feedback</string>
    <string name="report_bugs_summary">Report bugs or request new features.</string>
    <string name="rate">Rate</string>
    <string name="rate_summary">Leave a positive rating on store if you like Feeder.</string>
    <string name="special_thanks_to">Special thanks to</string>
    <string name="wechat_summary">ID: matchzsr</string>
    <string name="aaron_swartz">Aaron Swartz</string>
    <string name="about">About</string>
    <string name="wechat">Wechat</string>
    <string name="moment">Moments</string>
    <string name="weibo">Weibo</string>
    <string name="instapaper">Instapaper</string>
    <string name="more">More</string>
    <string name="change_layout">Change layout</string>
    <string name="switch_to_image_layout">Switch to Image Layout</string>
    <string name="switch_to_text_layout">Switch to Text Layout</string>
    <string name="share_to">Share To</string>
    <string name="google_plus">Google Plus</string>
    <string name="pocket">Pocket</string>
    <string name="evernote">Evernote</string>
    <string name="share_complete">Share Complete</string>
    <string name="share_failed">Share Failed</string>
    <string name="share_cancel">Share Cancel</string>
    <string name="share">Share</string>
    <string name="fav">Favorite</string>
    <string name="link">Open Article Link</string>
    <string name="favorited">Starred</string>
    <string name="unfavorited">Unstarred</string>
    <string name="share_summary">Share to friends if you like Feeder.</string>
    <string name="join">Join</string>
    <string name="join_summary">Create efficient RSS together.</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Inspire Feeder developer.</string>
    <string name="app_share_desc">Rss app with material design and open source.</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="import_opml">Import OPML</string>
    <string name="import_failed">Import failed</string>
    <string name="import_failed_format">Import failed, unrecognizable file format</string>
    <string name="import_success">Import success</string>
    <string name="reading_font_size">Reading font size</string>
    <string name="account_management">Account Management</string>
    <string name="account_feedly_add">Add Feedly Account</string>
    <string name="font">Font</string>
    <string name="account">Account</string>
    <string name="small">Small</string>
    <string name="big">Big</string>
    <string name="medium">Medium</string>
    <string name="copied">ID Copied</string>
    <string name="alipay_account_copied">AliPay account Copied</string>
    <string name="back_exit_hint">Back again to exit</string>
    <string name="search_hint">Search</string>
    <string name="add_custom_success">Add Success</string>
    <string name="add_custom_failed">Add Failed</string>
    <string name="send_to">Send to</string>
    <string name="create">Create</string>
    <string name="create_account">Create Collection</string>
    <string name="local_account">Local Account</string>
    <string name="ino_account">Inoreader Account</string>
    <string name="account_name">Collection Name</string>
    <string name="create_account_first">Please create account first</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Collection</string>
    <string name="delete_confirm_tip">Delete collection and subscriptions belong</string>
    <string name="upper_confirm">CONFIRM</string>
    <string name="upper_cancel">CANCEL</string>
    <string name="default_account_name">Default Collection</string>
    <string-array name="font_size">
        <item>@string/small</item>
        <item>@string/medium</item>
        <item>@string/big</item>
    </string-array>
    <string-array name="account_long_click_menu">
        <item>@string/rename</item>
        <item>@string/delete</item>
    </string-array>
    <string-array name="account_type_selection">
        <item>@string/local_account</item>
        <item>@string/ino_account</item>
    </string-array>
</resources>
