<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_link"
          android:title="@string/link"
          android:orderInCategory="90"
          android:icon="@drawable/ic_language_white_24dp"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_fav"
          android:title="@string/fav"
          android:orderInCategory="90"
          android:icon="@drawable/ic_star_border_white_24dp"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_share"
          android:title="@string/share"
          android:orderInCategory="90"
          android:icon="@drawable/ic_share"
          app:showAsAction="ifRoom" />
</menu>